# wikilaps

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  docker-compose.yaml  justfile
.github/workflows/: backend.yml  docker-publish.yml  frontend.yml  release-please.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  justfile
backend/.sqlx/: query-03ee09d42b7730b5f78d65f37defc6d03e57cf1fbbdc58dc7f37b2e3c1767ae3.json  query-0b225981829e5801a87e173fb5ec8626c2f3fa1a9801c8bf1bd05ec90a746373.json  query-3431e3c433b8051e03eeda144352aab4543197a98a254e37768180043973deba.json  query-44b882273965474bf89618ec1972f931b460c3782d69d6181ca4676f26911874.json  query-473d22f5d3c16577f095dd746016adaadda416f26ee4ea45a63ed1351975fddc.json  query-5f633401901201c78e0c53015e7abb62d80f1b1033fe31e4852be400af1526d6.json  query-68542c347c11773a43748ea5afc8a690f0da686f77a034afd11dcd99905e4a14.json  query-6aa83bee0f712a4237e124f71d81541c1b404fa7b2b876a2d21338edbb8e7f69.json  query-8695ab10809b4d3aa995549db415909175c95e97b9fda4caf798c8888dc349b3.json  query-9200c39943bfdd85a095f6d3e39bc8eaa7a1ec9be845d5d6716ff50e12e27407.json  query-9c86dac3a107a755fa9b9e1bc26f9db25a0048eac16c2f914f5c87747063ef85.json  query-9e796ff57ff24a2a6a1755457ab00f371c41e3296464741fb74e6fc9509abfa1.json  query-b0218d7e12445149619bb6710d8aa3bd49061cd444370c66abaa0b153f67fd5b.json  query-ba885fdee9a0091d19b44693dc065c66ae7fbc7313915707460b12b9d5860dc7.json  query-bda1b67691dca7dac88a68738bae2fd1a5563ddcd61fc45abeb2c8fa2fe02c67.json  query-bec0b53647361d44db5084af209a80e263aed670c18c1f00bc99c4f33b60f9ca.json  query-c7077427a4620930dafc1be6779a13c4c2ed5d777f6cfc4f58cddb4ce7417e1f.json  query-d66255861280e516d1206958774613e75260fd90fdcaf0ba2148d798a64771c5.json  query-d7b80fa88ed4af87ee85187da1853a038fd44dfb23cd70d42916ea10336fbadf.json  query-eb92d61e86a0d331af3fbd3de9e9298b47de689b4d81336291829500e89a1979.json  query-f4a061dd3b32bae6a8118817afbed175cd5a6daeb88fadc32919f53e1004a65e.json  query-f6da0951fe4fc8ff6e4cc527a26972dc2d3870bf36b41531580a3f429c767782.json
backend/migrations/: 20251114160944_init_database.sql  20260704164343_seed_upsert_keys.sql  20260711075924_discord-poll-data.sql
backend/src/: auth.rs  config.rs  database.rs  docs.rs  error.rs  lib.rs  main.rs  pagination.rs  routes.rs  util.rs
etc/: discord-polls.yml  services.yaml
frontend/: .prettierignore  .prettierrc  Dockerfile  eslint.config.js  handler.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/messages/: de.json  en.json
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: api.ts  client.ts  date-time.test.ts  date-time.ts  fixtures.ts  i18n.ts  (+3 more)
(+19 files in other folders)
