[package]
name = "wikilaps-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
dotenvy = "0.15.7"
jiff = { version = "0.2.16", features = ["serde"] }
jiff-sqlx = { version = "0.2", features = ["postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
