[package]
name = "wikilaps"
version = "0.1.0"
edition = "2024"
default-run = "wikilaps"

[features]
seed = [
    "dep:reqwest",
    "dep:zip",
    "dep:serde_json",
    "dep:clap",
    "dep:serde_norway",
]

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
dotenvy = "0.15.7"
jiff = { version = "0.2.16", features = ["serde"] }
jiff-sqlx = { version = "0.2", features = ["postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
hmac = "0.13.0"
sha2 = "0.11.0"
rand = "0.10.2"
# only for cookie max-age...
time = { version = "0.3.53", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }
zip = { version = "2", default-features = false, features = [
    "deflate",
], optional = true }
serde_json = { version = "1", optional = true }
utoipa = { version = "5.5.0", features = ["jiff_0_2"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
clap = { version = "4.6.1", features = ["derive"], optional = true }
serde_norway = { version = "0.9.42", optional = true }

[[bin]]
name = "seed_db"
path = "src/bin/seed_db.rs"
required-features = ["seed"]
